# trv1-chain

./: Cargo.toml  LICENSE  README.md
cli/: Cargo.toml
cli/src/: main.rs
consensus/bft/: Cargo.toml
consensus/bft/src/: block.rs  lib.rs  round.rs  state_machine.rs  types.rs  vote.rs
consensus/net/: Cargo.toml
consensus/net/src/: codec.rs  lib.rs  network.rs  peer.rs
docs/: architecture.md  rpc-reference.md  testnet-guide.md
economics/fees/: Cargo.toml
economics/fees/src/: eip1559.rs  lib.rs  split.rs  types.rs
economics/rewards/: Cargo.toml
economics/rewards/src/: developer.rs  lib.rs  types.rs
economics/staking/: Cargo.toml
economics/staking/src/: lib.rs  pool.rs  rewards.rs  tiers.rs  types.rs
genesis/: Cargo.toml
genesis/src/: builder.rs  config.rs  lib.rs  types.rs
mempool/: Cargo.toml
mempool/src/: lib.rs  pool.rs  types.rs  validation.rs
rpc/: Cargo.toml
rpc/src/: handlers.rs  lib.rs  server.rs  types.rs
runtime/slashing/: Cargo.toml
runtime/slashing/src/: engine.rs  evidence.rs  lib.rs  types.rs
runtime/state/: Cargo.toml
runtime/state/src/: accounts.rs  lib.rs  state_db.rs  types.rs
runtime/storage/: Cargo.toml
runtime/storage/src/: archive.rs  lib.rs  lru_cache.rs  nvme.rs  tiered.rs  types.rs
runtime/validator-set/: Cargo.toml
runtime/validator-set/src/: lib.rs  manager.rs  rotation.rs  types.rs
scripts/: launch-testnet.sh  send-tx.sh
tests/: integration_test.rs
validator/: Cargo.toml
validator/src/: main.rs
