[workspace]
resolver = "2"
members = [
    "consensus/bft",
    "consensus/net",
    "economics/staking",
    "economics/fees",
    "economics/rewards",
    "runtime/validator-set",
    "runtime/slashing",
    "runtime/storage",
    "validator",
    "cli",
    "rpc",
    "genesis",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/sjxcrypto/trv1-chain"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Cryptography
ed25519-dalek = { version = "2.1", features = ["serde", "rand_core"] }
sha2 = "0.10"
rand = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Networking
libp2p = { version = "0.53", features = ["tcp", "noise", "yamux", "gossipsub", "tokio", "macros", "identify"] }

# RPC
jsonrpsee = { version = "0.21", features = ["server", "macros"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Misc
thiserror = "1.0"
hex = "0.4"
parking_lot = "0.12"
lru = "0.12"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
bs58 = "0.5"

# Internal crates
trv1-bft = { path = "consensus/bft" }
trv1-net = { path = "consensus/net" }
trv1-staking = { path = "economics/staking" }
trv1-fees = { path = "economics/fees" }
trv1-rewards = { path = "economics/rewards" }
trv1-validator-set = { path = "runtime/validator-set" }
trv1-slashing = { path = "runtime/slashing" }
trv1-storage = { path = "runtime/storage" }
trv1-genesis = { path = "genesis" }
trv1-rpc = { path = "rpc" }
trv1-cli = { path = "cli" }
