[package]
name = "trv1-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "TRv1 command-line interface"

[[bin]]
name = "trv1"
path = "src/main.rs"

[dependencies]
trv1-genesis = { workspace = true }
trv1-staking = { workspace = true }
trv1-fees = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
