[package]
name = "trv1-genesis"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "TRv1 genesis configuration"

[dependencies]
trv1-staking = { workspace = true }
trv1-fees = { workspace = true }
trv1-validator-set = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ed25519-dalek = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
