[package]
name = "trv1-mempool"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "TRv1 transaction mempool"

[dependencies]
trv1-bft = { workspace = true }
trv1-state = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
