[package]
name = "trv1-net"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "TRv1 P2P networking for consensus messages"

[dependencies]
trv1-bft = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
tokio = { workspace = true }
libp2p = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
ed25519-dalek = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
rand = { workspace = true }
