[package]
name = "trv1-rewards"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "TRv1 developer rewards distribution"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ed25519-dalek = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
