[package]
name = "trv1-staking"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "TRv1 flat 5% staking rewards + tiered passive staking"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
ed25519-dalek = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
