[package]
name = "trv1-slashing"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "TRv1 validator-only slashing (delegators never slashed)"

[dependencies]
trv1-validator-set = { workspace = true }
trv1-staking = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ed25519-dalek = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
